# diginstrument

./: CMakeLists.txt  README.md
doc/instrument_test_coverage/: code_coverage.info  index-sort-f.html  index-sort-l.html  index.html
doc/instrument_test_coverage/inc/: Applicator.h.func-sort-c.html  Applicator.h.func.html  Applicator.h.gcov.html  AudioSource.h.func-sort-c.html  AudioSource.h.func.html  AudioSource.h.gcov.html  CheapSawtoothGenerator.h.func-sort-c.html  CheapSawtoothGenerator.h.func.html  CheapSawtoothGenerator.h.gcov.html  CheapSquareGenerator.h.func-sort-c.html  CheapSquareGenerator.h.func.html  CheapSquareGenerator.h.gcov.html  ComplexWaveformGenerator.h.func-sort-c.html  ComplexWaveformGenerator.h.func.html  ComplexWaveformGenerator.h.gcov.html  ConsolidationMethods.h.func-sort-c.html  ConsolidationMethods.h.func.html  ConsolidationMethods.h.gcov.html  Consolidator.h.func-sort-c.html  Consolidator.h.func.html  Consolidator.h.gcov.html  Instrument.h.func-sort-c.html  Instrument.h.func.html  Instrument.h.gcov.html  Multiplexer.h.func-sort-c.html  Multiplexer.h.func.html  Multiplexer.h.gcov.html  Note.h.func-sort-c.html  Note.h.func.html  Note.h.gcov.html  Pattern.h.func-sort-c.html  Pattern.h.func.html  Pattern.h.gcov.html  PortAudioBackend.h.func-sort-c.html  PortAudioBackend.h.func.html  PortAudioBackend.h.gcov.html  QueueBuffer.h.func-sort-c.html  QueueBuffer.h.func.html  QueueBuffer.h.gcov.html  Recorder.h.func-sort-c.html  (+53 more)
doc/instrument_test_coverage/instrument_test/: index-sort-f.html  index-sort-l.html  index.html  pattern_test.cpp.func-sort-c.html  pattern_test.cpp.func.html  pattern_test.cpp.gcov.html  simple_instrument_test.cpp.func-sort-c.html  simple_instrument_test.cpp.func.html  simple_instrument_test.cpp.gcov.html  test_main.cpp.func-sort-c.html  test_main.cpp.func.html  test_main.cpp.gcov.html
doc/instrument_test_coverage/src/: cheap_sawtooth_generator.cpp.func-sort-c.html  cheap_sawtooth_generator.cpp.func.html  cheap_sawtooth_generator.cpp.gcov.html  cheap_square_generator.cpp.func-sort-c.html  cheap_square_generator.cpp.func.html  cheap_square_generator.cpp.gcov.html  complex_waveform_generator.cpp.func-sort-c.html  complex_waveform_generator.cpp.func.html  complex_waveform_generator.cpp.gcov.html  consolidation_methods.cpp.func-sort-c.html  consolidation_methods.cpp.func.html  consolidation_methods.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  multiplexer.cpp.func-sort-c.html  multiplexer.cpp.func.html  multiplexer.cpp.gcov.html  ogg_file_loader.cpp.func-sort-c.html  ogg_file_loader.cpp.func.html  ogg_file_loader.cpp.gcov.html  pattern.cpp.func-sort-c.html  pattern.cpp.func.html  pattern.cpp.gcov.html  portaudio_backend.cpp.func-sort-c.html  portaudio_backend.cpp.func.html  portaudio_backend.cpp.gcov.html  queue_buffer.cpp.func-sort-c.html  queue_buffer.cpp.func.html  queue_buffer.cpp.gcov.html  recorder.cpp.func-sort-c.html  recorder.cpp.func.html  recorder.cpp.gcov.html  repeating_buffer.cpp.func-sort-c.html  repeating_buffer.cpp.func.html  repeating_buffer.cpp.gcov.html  sawtooth_generator.cpp.func-sort-c.html  sawtooth_generator.cpp.func.html  sawtooth_generator.cpp.gcov.html  simple_instrument.cpp.func-sort-c.html  (+17 more)
doc/mixer_test_coverage/: code_coverage.info  index-sort-f.html  index-sort-l.html  index.html
doc/mixer_test_coverage/inc/: Applicator.h.func-sort-c.html  Applicator.h.func.html  Applicator.h.gcov.html  AudioSource.h.func-sort-c.html  AudioSource.h.func.html  AudioSource.h.gcov.html  CheapSawtoothGenerator.h.func-sort-c.html  CheapSawtoothGenerator.h.func.html  CheapSawtoothGenerator.h.gcov.html  CheapSquareGenerator.h.func-sort-c.html  CheapSquareGenerator.h.func.html  CheapSquareGenerator.h.gcov.html  Clipping.h.func-sort-c.html  Clipping.h.func.html  Clipping.h.gcov.html  ComplexWaveformGenerator.h.func-sort-c.html  ComplexWaveformGenerator.h.func.html  ComplexWaveformGenerator.h.gcov.html  ConsolidationMethods.h.func-sort-c.html  (+71 more)
inc/: Instrument.h  Note.h  Pattern.h  iNote.h
instrument_test/: CMakeLists.txt  pattern_test.cpp  simple_instrument_test.cpp
mixer_test/: CMakeLists.txt
src/: pattern.cpp  simple_instrument.cpp
(+129 files in other folders)
